--- a/src/assets/globalVariables.css
+++ b/src/assets/globalVariables.css
@@ -1,20 +1,21 @@
 :root {
-  --color-dark-brown: #2b0404;
-  --color-black: #080404;
-  --color-red: #ee0404;
-  --color-medium-red: #a30404;
-  --color-dark-redd: #6c0404;
-  --color-darker-red: #3c0404;
-  --color-dark-red: #180404;
+	--color-dark-brown: #2b0404;
+	--color-black: #080404;
+	--color-red: #ee0404;
+	--color-medium-red: #a30404;
+	--color-dark-redd: #6c0404;
+	--color-darker-red: #3c0404;
+	--color-dark-red: #180404;
 }
 
 @font-face {
-  font-family: "Lato";
-  src: local("Lato"), url(./fonts/Lato-Regular.ttf) format("truetype");
+	font-family: "Lato";
+	src: local("Lato"), url(./fonts/Lato-Regular.ttf) format("truetype");
 }
 
-html, body {
-  font-family: "Lato";
+html,
+body {
+	font-family: "Lato";
 }
 
 /* latin-ext */
